name:                 HaskellChatServerProgram
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Ashwath Kumar
maintainer:
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable HaskellChatServerProgram
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
